# ai_learning_coach

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
backend/: README.md  main.py  requirements.txt
contest/: README.md
contest/src/: main.py  memory.py  models.py  utils.py
contest/src/agents/: examiner_agent.py  goal_agent.py  optimizer_agent.py
contest/tools/: generate_project_art.py  question_generator_agent.py  test.py
ios/: README.md
ios/AILearningCoach/: AILearningCoachApp.swift  ContentView.swift
ios/AILearningCoach.xcodeproj/: project.pbxproj
ios/AILearningCoach/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/AILearningCoach/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/AILearningCoach/Models/: Flashcard.swift  Project.swift  Question.swift  SpacedRepetition.swift  UserPersistence.swift
ios/AILearningCoach/Notifications/: NotificationManager.swift
ios/AILearningCoach/Persistence/: DataController.swift
ios/AILearningCoach/Services/: APIService.swift
ios/AILearningCoach/Theme/: DesignSystem.swift
ios/AILearningCoach/Views/: DiagnosticView.swift  ExamView.swift  FlashcardStudyView.swift  HomeView.swift  PlanEditorView.swift  SettingsView.swift  SplashScreenView.swift
prompts/: evaluator_prompt.txt  prompt_v1.txt
src/: README.md  main.py  memory.py  migration.py  models.py
src/agents/: diagnostic_agent.py  examiner_agent.py  goal_agent.py  optimizer_agent.py
tools/: anki_connection.py  examiner_agent_test.py  generate_diagram.py  sql_schema_memory.sql  tracer.py
(+7 files in other folders)
